Stackless-Python News
+++++++++++++++++++++

This file documents user visible changes to the Stackless extension of C-Python.
For other changes see Misc/NEWS.

What's New in Stackless 3.X.X?
==============================

*Release date: 20XX-XX-XX*

- https://github.com/stackless-dev/stackless/issues/149
  C-Python bpo-25612 (#1773) moves the exception state information from frame
  object to coroutine (generator/thread) object where it belongs. As a
  consequence Stackless moves the exception state information from thread
  to tasklet. This changes the pickle format of frame, tasklet and generator
  objects compared to previous major versions of Stackless.

- https://github.com/stackless-dev/stackless/issues/166
  Fix C-API functions PyEval_EvalFrameEx() and PyEval_EvalFrame().
  They are now compatible with C-Python.

- https://github.com/stackless-dev/stackless/issues/168
  Make Stackless compatible with old Cython extension modules compiled
  for regular C-Python.

- https://github.com/stackless-dev/stackless/issues/167
  Replace 'printf(...)' calls by PySys_WriteStderr(...). They are used to emit
  an error message, if there is a pending error while entering Stackless
  subsystem.

- https://github.com/stackless-dev/stackless/issues/154
  Fix a minor bug in STACKLESS_PROMOTE_WRAPPER and STACKLESS_PROMOTE_METHOD.

- https://github.com/stackless-dev/stackless/issues/150
  Thread ids are now unsigned. See bpo-6532. This change of the Python C-API
  causes analog changes in the Stackless C-API. In
  PyTasklet_BindThread(PyTaskletObject *task, unsigned long thread_id)
  the type of "thread_id" changed from "long" to "unsigned long". And
  the return value of PyStackless_GetCurrentId(void) changed from "long" to
  "unsigned long".
  The prototype of PyStackless_GetCurrentId(void) was missing from
  stackless_api.h. It is now defined.

- https://github.com/stackless-dev/stackless/issues/146
  Always initialize _stackless.bonb type. Prevents a NULL-pointer access,