@@ -5,6 +5,7 @@
 extern "C" {
 #endif
 
+#include "platf/slp_platformselect.h"
 #include "frameobject.h"
 
 #ifdef STACKLESS
@@ -257,8 +258,32 @@ PyAPI_DATA(PyTypeObject) PyChannel_Type;
 #define PyChannel_CheckExact(op) (Py_TYPE(op) == PyChannel_TypePtr)
 
 /*
- * runtime state */
+ * Stackless runtime state
+ *
+ * Initialized by
+ * void slp_initialize(struct _stackless_runtime_state * state)
+ * in stackless_util.c
+ */
 struct _stackless_runtime_state {
+    /*
+     * flag whether the next call should try to be stackless.
+     * The protocol is: This flag may be only set if the called
+     * thing supports it. It doesn't matter whether it uses the
+     * chance, but it *must* set it to zero before returning.
+     * This flags in a way serves as a parameter that we don't have.
+     *
+     * As long as the GIL is shared between sub-interpreters,
+     * try_stackless can be a field in the runtime state.
+     */
+    int try_stackless;
+
+    /* Used to manage free C-stack objects, see stacklesseval.c */
+    int cstack_cachecount;
+    PyCStackObject *cstack_cache[CSTACK_SLOTS];
+
+    /*
+     * Used during a hard switch.
+     */
     struct {
         PyCStackObject **cstprev;
         PyCStackObject *cst;
