@@ -9,6 +9,12 @@ What's New in Stackless 3.X.X?
 
 *Release date: 20XX-XX-XX*
 
+- https://github.com/stackless-dev/stackless/issues/152
+  C-Python bpo30860 consolidates stateful C globals under a single struct.
+  Stackless also moves its stateful C globals to the appropriate structures
+  (runtime-state or interpreter-state or thread-state). This change modifies
+  some internal APIs and structures.
+
 - https://github.com/stackless-dev/stackless/issues/149
   C-Python bpo-25612 (#1773) moves the exception state information from frame
   object to coroutine (generator/thread) object where it belongs. As a
